--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
       <a class="github-button" href="https://github.com/umihico/microdb/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/microdb on GitHub">Issue</a>
     </div>
     <p class="indent">In-memory, Hash-mapping, Disk-writable, Thread-safe database.</p>
+    <h2>Hobby</h2>
+    <h3>　Books</h3>
+    <p class="indent">my kidle library and highlights are<a href="/kindle-highlights">HERE</a></p>
+    <!-- <h3>Photography</h3> -->
 
 
 
