--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p class="indent">2018 Freelance while traveling</p>
     <p class="indent">2014 Nomura Securities Co., Ltd.</p>
 
-    <h2>Projects</h2>
+    <h2>Hobby Projects</h2>
     <div class="project">
       　<a class="project-link" href="https://github.com/umihico/minigun-requests">minigun-requests</a><br>
       　<a class="github-button" href="https://github.com/umihico/minigun-requests" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/minigun-requests on GitHub">Star</a>
@@ -45,7 +45,7 @@
     </div>
     <p class="indent">Web scraping API to outsource tons of GET & xpath to cloud computing</p>
     <div class="project">
-      　<a class="project-link" href="https://github.com/umihico/thumbnailed-portfolio-websites">thumbnailed-portfolio-websites</a><br>
+      　<a class="project-link" href="http://umihi.co/thumbnailed-portfolio-websites/">thumbnailed-portfolio-websites</a><br>
       　<a class="github-button" href="https://github.com/umihico/thumbnailed-portfolio-websites" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/thumbnailed-portfolio-websites on GitHub">Star</a>
       <a class="github-button" href="https://github.com/umihico/thumbnailed-portfolio-websites/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/thumbnailed-portfolio-websites on GitHub">Issue</a>
     </div>
@@ -56,10 +56,12 @@
       <a class="github-button" href="https://github.com/umihico/microdb/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/microdb on GitHub">Issue</a>
     </div>
     <p class="indent">In-memory, Hash-mapping, Disk-writable, Thread-safe database.</p>
-    <h2>Hobby</h2>
-    <h3>　Books</h3>
-    <p class="indent">my kidle library and highlights are<a href="/kindle-highlights">HERE</a></p>
-    <!-- <h3>Photography</h3> -->
+    <div class="project">
+      　<a class="project-link" href="http://umihi.co/kindle-highlights/">kindle-highlights</a><br>
+      　<a class="github-button" href="https://github.com/umihico/kindle-highlights" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/kindle-highlights on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/umihico/kindle-highlights/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/kindle-highlights on GitHub">Issue</a>
+    </div>
+    <p class="indent">Share highlights that have been inspiring you in github pages.</p>
 
 
 
