--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
     </div>
     <p class="indent">In-memory, Hash-mapping, Disk-writable, Thread-safe database.</p>
     <div class="project">
+      　<a class="project-link" href="https://github.com/umihico/ppickle">ppickle</a><br>
+      　<a class="github-button" href="https://github.com/umihico/ppickle" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/ppickle on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/umihico/ppickle/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/ppickle on GitHub">Issue</a>
+    </div>
+    <p class="indent">multilingual human-readable output pickler</p>
+    <div class="project">
       　<a class="project-link" href="http://umihi.co/kindle-highlights/">kindle-highlights</a><br>
       　<a class="github-button" href="https://github.com/umihico/kindle-highlights" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/kindle-highlights on GitHub">Star</a>
       <a class="github-button" href="https://github.com/umihico/kindle-highlights/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/kindle-highlights on GitHub">Issue</a>
