--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <p class="indent">I'm <b>umihico</b>, a software engineer currently living in Tokyo. </p>
     <p><a class="github-button" href="https://github.com/umihico" data-size="large" data-show-count="true" aria-label="Follow @umihico on GitHub">Follow @umihico</a></p>
     Others:
+    <a href="https://gist.github.com/umihico/">Gist</a>
     <a href="https://twitter.com/umihico_">Twitter</a>
     <a href="https://qiita.com/umihico">Qiita</a>
     <!-- <a href="https://stackoverflow.com/users/9774231/umihico">stackoverflow</a> -->
