--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </div>
     <p class="indent">GIF Screenshots of everybody's #portfolio-website</p>
     <div class="project">
-      　<a class="project-link" href="https://github.com/umihico/chromeless">chromeless</a><br>
-      　<a class="github-button" href="https://github.com/umihico/chromeless" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/chromeless on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/umihico/chromeless/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/chromeless on GitHub">Issue</a>
+      　<a class="project-link" href="https://github.com/umihico/pythonista-chromeless">pythonista-chromeless</a><br>
+      　<a class="github-button" href="https://github.com/umihico/pythonista-chromeless" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/pythonista-chromeless on GitHub">Star</a>
+      <a class="github-button" href="https://github.com/umihico/pythonista-chromeless/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/pythonista-chromeless on GitHub">Issue</a>
     </div>
     <p class="indent">AWS lambda unit which execute given code on selenium</p>
     <div class="project">
