--- a/index.html
+++ b/index.html
@@ -1,87 +1,5 @@
-<html>
-
-<head>
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <link rel="stylesheet" href="css.css" type="text/css">
-  <meta charset='utf-8'>
-  <title>umihico -software engineer in Tokyo- </title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <script src="js/stickyfill.min.js"></script>
-  <script>
-    $('.sticky').Stickyfill();
-  </script>
-</head>
-
-<body>
-  <div class="wavebox">
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-  </div>
-  <div class="container">
-
-    <a class="logo" href="/">
-      <img src="logo100x100.png" alt="logo">
-    </a>
-    <h1>Hello</h1>
-    <p class="indent">I'm <b>umihico</b>, a software engineer currently living in Tokyo. </p>
-    <p><a class="github-button" href="https://github.com/umihico" data-size="large" data-show-count="true" aria-label="Follow @umihico on GitHub">Follow @umihico</a></p>
-    Others:
-    <a href="https://gist.github.com/umihico/">Gist</a>
-    <a href="https://twitter.com/umihico_">Twitter</a>
-    <a href="https://qiita.com/umihico">Qiita</a>
-    <!-- <a href="https://stackoverflow.com/users/9774231/umihico">stackoverflow</a> -->
-    <!-- <a href="https://bitbucket.org/umihico/">Bitbucket</a> -->
-    <br>
-
-    <h2>Experience</h2>
-    <p class="indent">2018 Freelance while traveling</p>
-    <p class="indent">2014 Nomura Securities Co., Ltd.</p>
-
-    <h2>Hobby Projects</h2>
-    <div class="project">
-      　<a class="project-link" href="http://umihi.co/thumbnailed-portfolio-websites/">thumbnailed-portfolio-websites</a><br>
-      　<a class="github-button" href="https://github.com/umihico/thumbnailed-portfolio-websites" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/thumbnailed-portfolio-websites on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/umihico/thumbnailed-portfolio-websites/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/thumbnailed-portfolio-websites on GitHub">Issue</a>
-    </div>
-    <p class="indent">GIF Screenshots of everybody's #portfolio-website</p>
-    <div class="project">
-      　<a class="project-link" href="https://github.com/umihico/pythonista-chromeless">pythonista-chromeless</a><br>
-      　<a class="github-button" href="https://github.com/umihico/pythonista-chromeless" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/pythonista-chromeless on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/umihico/pythonista-chromeless/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/pythonista-chromeless on GitHub">Issue</a>
-    </div>
-    <p class="indent">AWS lambda unit which execute given code on selenium</p>
-    <div class="project">
-      　<a class="project-link" href="https://github.com/umihico/minigun-requests">minigun-requests</a><br>
-      　<a class="github-button" href="https://github.com/umihico/minigun-requests" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/minigun-requests on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/umihico/minigun-requests/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/minigun-requests on GitHub">Issue</a>
-    </div>
-    <p class="indent">Web scraping API to outsource tons of GET & xpath to cloud computing</p>
-    <div class="project">
-      　<a class="project-link" href="https://github.com/umihico/microdb">microdb</a><br>
-      　<a class="github-button" href="https://github.com/umihico/microdb" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/microdb on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/umihico/microdb/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/microdb on GitHub">Issue</a>
-    </div>
-    <p class="indent">In-memory, Hash-mapping, Disk-writable, Thread-safe database.</p>
-    <div class="project">
-      　<a class="project-link" href="https://github.com/umihico/ppickle">ppickle</a><br>
-      　<a class="github-button" href="https://github.com/umihico/ppickle" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/ppickle on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/umihico/ppickle/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/ppickle on GitHub">Issue</a>
-    </div>
-    <p class="indent">multilingual human-readable output pickler</p>
-    <div class="project">
-      　<a class="project-link" href="http://umihi.co/kindle-highlights/">kindle-highlights</a><br>
-      　<a class="github-button" href="https://github.com/umihico/kindle-highlights" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/kindle-highlights on GitHub">Star</a>
-      <a class="github-button" href="https://github.com/umihico/kindle-highlights/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/kindle-highlights on GitHub">Issue</a>
-    </div>
-    <p class="indent">Share highlights that have been inspiring you in github pages.</p>
-
-
-
-
-
-  </div>
-
-</body>
-
-</html>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://umihi.co/</title>
+<meta http-equiv="refresh" content="0; URL=https://umihi.co/">
+<link rel="canonical" href="https://umihi.co/">
